exports_files(glob(["*.c", "*.h"]))

COPTS = [
    "-x", "c",
    "-std=c11",
    "-pedantic-errors",
] + select({
    "//bzl/host:linux": [
        "-D_POSIX_C_SOURCE=200809L", ## strdup, strndup, waitpid, etc.
        "-D_DEFAULT_SOURCE"],        ## DT_ constants from dirent.h
    "//conditions:default":   []
})

config_setting(name = "linux",
               constraint_values = ["@platforms//os:linux"])

config_setting(name = "macos",
               constraint_values = ["@platforms//os:macos"])

##########
cc_library(
    name  = "xdg",
    srcs = ["xdg.c", "//src/hdrs:xdg.h"],
    copts = COPTS + [
        "-x", "c",
        "-std=c11",
        "-Wall",
        "-Wpedantic",

        "-Idev", "-Iexternal/mibl/dev",
        "-I$(GENDIR)/src/hdrs",
        "-I$(GENDIR)/external/mibl/src/hdrs",

        "-Ivendored/logc",
        "-Iexternal/mibl/vendored/logc",
        "-Ivendored/uthash",
        "-Iexternal/mibl/vendored/uthash",
    ],
    linkstatic = True,
    deps = ["//vendored/logc", "//vendored/uthash", "//dev"],
    visibility = ["//visibility:public"]
)
