load("//:BUILD.bzl",
     COPTS = "BASE_COPTS",
     DEFINES = "BASE_DEFINES",
     "LIBLOG_CC_VERSION",
     "UTHASH_VERSION")

exports_files(glob(["*.c", "*.h"]))

# COPTS = [
#     "-x", "c",
#     "-std=c11",
#     "-pedantic-errors",
# ] + select({
#     "//bzl/host:linux": [
#         "-D_POSIX_C_SOURCE=200809L", ## strdup, strndup, waitpid, etc.
#         "-D_DEFAULT_SOURCE"],        ## DT_ constants from dirent.h
#     "//conditions:default":   []
# })

config_setting(name = "linux",
               constraint_values = ["@platforms//os:linux"])

config_setting(name = "macos",
               constraint_values = ["@platforms//os:macos"])

##########
cc_library(
    name  = "xdg",
    linkstatic = True,
    srcs = ["xdg.c", "//src/hdrs:xdg.h"],
    deps = ["@liblog_cc//src:logc",
            "@uthash//src:uthash",
            "//dev"],
    copts = COPTS + [
        "-x", "c",
        "-std=c11",
        "-Wall",
        "-Wpedantic",

        "-Idev",
        "-Iexternal/mibl/dev",

        "-I$(GENDIR)/src/hdrs",
        "-I$(GENDIR)/external/mibl/src/hdrs",

        "-Iexternal/liblog_cc~{}/src".format(LIBLOG_CC_VERSION),
        "-Iexternal/uthash~{}/src".format(UTHASH_VERSION)
    ],
    local_defines = DEFINES,
    visibility = ["//visibility:public"]
)
