load("@rules_cc//cc:defs.bzl", "cc_library")
load("//src/opam:BUILD.bzl", "CMD_FLAGS", "BOOTSTRAP_INCLUDES")

################################################################
cc_binary(
    name  = "walk_test",
    srcs  = [
        "walk_test.c",
        "walk_test.h",
        "//src:log.h"
    ],
    copts = CMD_FLAGS + BOOTSTRAP_INCLUDES + [
        "-Itest",

        "-I$(GENDIR)/src",
        "-I$(GENDIR)/src/opam",
        "-I$(GENDIR)/test/opam",
        # "-I$(GENDIR)/external/opam/test"

        "-Iexternal/mibl/src",
        "-I$(GENDIR)/external/mibl/src",

        "-Iexternal/mibl/opam/test",
        "-I$(GENDIR)/external/mibl/test/opam",
    ],
    defines = ["DEBUG", "DEBUG_TRACE"],
    deps = [
        "//src:treewalker",
        # "//src/opam:opam_lexer"
    ],
    linkstatic = 1
)

################################################################
## testing lexis, syntaxis

cc_binary(
    name  = "opam_lex",
    srcs  = [
        "opam_lex.c",
        "opam_lex.h",
        "//src:log.h"
    ],
    copts = CMD_FLAGS + BOOTSTRAP_INCLUDES + [
        "-Isrc",
        "-I$(GENDIR)/src/opam",
        "-I$(GENDIR)/test/opam",
        # "-I$(GENDIR)/external/opam/test"
    ],
    defines = ["DEBUG", "DEBUG_TRACE"],
    deps = [
        "//src/opam:opam_lexer"
    ],
    linkstatic = 1
)

##########
cc_binary(
    name  = "opam_parse",
    srcs  = [
        "opam_parse.c",
        "opam_parse.h",
        "//src:log.h"
    ],
    copts = CMD_FLAGS + BOOTSTRAP_INCLUDES + [
        # "-Ibootstrap",
        # "-I$(GENDIR)",
        "-Isrc",
        "-I$(GENDIR)/src/opam",
        "-I$(GENDIR)/test/opam",
        "-I$(GENDIR)/external/opam/test"
    ],
    # copts = select({
    #     # strdup is non-standard, not supported on linux in strict c11 mode
    #     "//bzl/host:macos": ["-std=c11"],
    #     "//bzl/host:linux": ["-std=gnu11"],
    #     "//conditions:default": ["-std=c11"],
    # }) + [
    #     "-pedantic-errors",

    #     "-I$(GENDIR)/test",
    #     # "-I$(GENDIR)/external/sealark/test",

    #     "-I$(GENDIR)/src",

    #     # "-Ivendored/logc",
    #     # "-Iexternal/sealark/vendored/logc",

    #     # "-Ivendored/uthash",
    #     # "-Iexternal/sealark/vendored/uthash",
    # ],
    defines = ["DEBUG", "DEBUG_TRACE"],
    deps = [
        "//src/opam:opam_parser"
    ],
    linkstatic = 1
)

################################################################
genrule(
    name = "mkhdrs",
    srcs = ["opam_lex.c", "opam_parse.c",
            "walk_test.c"],
    outs = ["opam_lex.h", "opam_parse.h", "walk_test.h"],
    cmd = "\n".join([
        "SRC1=$(location opam_lex.c)",
        "SRCDIR1=`dirname $$SRC1`",
        "$(location //src:makeheaders) \\",
        "    $(location opam_lex.c) \\",
        "    $(location opam_parse.c) \\",
        "    $(location walk_test.c) ",
        "cp $${SRCDIR1}/*.h $(@D)",
    ]),
    tools = ["//src:makeheaders"],
    visibility = ["//visibility:public"]
)
