load("@rules_cc//cc:defs.bzl", "cc_library")

cc_test(
    name = "test",
    srcs = ["dsl_test.c"],
    data = ["dsl_bash_script.dune"],
    copts = [
        "-std=c11",
        "-pedantic-errors",
        "-Wall",
        "-Werror",

        "-I$(GENDIR)/src/hdrs",
        "-I$(GENDIR)/external/mibl/src/hdrs",

        "-Ivendored/gopt",
        "-Iexternal/mibl/vendored/gopt",

        "-Ivendored/logc",
        "-Iexternal/mibl/vendored/logc",

        "-Ivendored/unity",
        "-Iexternal/mibl/vendored/unity",

        "-Ivendored/uthash",
        "-Iexternal/mibl/vendored/uthash",

        "-Iexternal/libs7/src"  # s7.h
    ] + select({
        "//bzl/host:debug": [""],
        "//conditions:default":   []
    }) + select({
        ## macos fastbuild: -UDEBUG
        "//conditions:default":   []
    }),
    defines = select({
        "//bzl/host:debug": ["DEBUG_TRACE", "DEBUG_MIBL"],
        "//conditions:default":   []
    }) + select({
        "//bzl/host:linux": [
            "_XOPEN_SOURCE=500", # strdup
            "_DEFAULT_SOURCE"    # dirent DT_* macros
        ],
        "//conditions:default":   []
    }),
    deps = [
        "//src:mibl",
        "//vendored/gopt",
        "//vendored/logc",
        "//vendored/unity",
        "//vendored/uthash",
    ],
    timeout = "short",
    visibility = ["//test:__subpackages__"]
)
