test_suite(
    name = "test",
    tests = [
        "//test/dune/action_dsl/base_cases/bash/case01/.mibl:test",
        "//test/dune/action_dsl/base_cases/cat:test",
        "//test/dune/action_dsl/base_cases/copy/case01/.mibl:test",
        "//test/dune/action_dsl/base_cases/cmp:test",
        "//test/dune/action_dsl/base_cases/diff/case01/.mibl:test",
        "//test/dune/action_dsl/base_cases/echo/case01/.mibl:test",
        "//test/dune/action_dsl/base_cases/system/case01/.mibl:test",
    ]
)
