## GENERATEDFILE ##

load("@rules_ocaml//build:rules.bzl",
     "ocaml_binary",
     "ocaml_library",
     "ocaml_ns_library",
     "ocaml_ns_resolver",
     "ocaml_exec_module",
     "ocaml_module",
     "ocaml_signature",
)

DEPS_1 = [
    "@ounit2//lib/ounit2"
]

OPTS_1 = [
        # "-open",
        # "Ounit",
        "-linkall"
]

##############################
####  Executable Targets  ####
ocaml_binary(
    name     = "main.exe",
    # prologue = [":libPrologue_1"],
    main     = ":Main",
    visibility = ["//visibility:public"],
)

ocaml_exec_module(
    name          = "Main",
    struct        = "main.ml",
    sig           = ":Main_cmi",
    opts          = ["-open", "Main_ns"] + OPTS_1,
    deps          = DEPS_1 + [
        ":A"
    ],
)

ocaml_signature(
    name          = "Main_cmi",
    src           = "main.mli",
    opts          = OPTS_1,
    deps          = DEPS_1,
)


ocaml_library(
    name     = "libPrologue_1",
    manifest = [
        ":A",
        ":B"
    ]
)

ocaml_ns_resolver(
    name     = "Main_ns",
    ns       = "Main_ns",
    manifest = [
        "A",
        "B"
    ]
)

######################## Modules & Signatures ########################
ocaml_module(
    ns_resolver   = ":Main_ns",
    name          = "A",
    struct        = "a.ml",
    opts          = OPTS_1, ## X3
    deps          = DEPS_1,
)

ocaml_module(
    ns_resolver   = ":Main_ns",
    name          = "B",
    struct        = "b.ml",
    opts          = OPTS_1, ## X3
    deps          = DEPS_1 + [
        ":A"
    ],
)

